# modernCppLearning

./: README.md
DesignPatterns/CoR/Basic/: CMakeLists.txt  Client.cpp  Client.h  ConcreteHandler1.cpp  ConcreteHandler1.h  ConcreteHandler2.cpp  ConcreteHandler2.h  Handler.h  main.cpp
DesignPatterns/CoR/HelpSystem/: Button.cpp  Button.h  HelpHandler.h  LocalHelp.cpp  LocalHelp.h  OnlineHelp.cpp  OnlineHelp.h  QuickHelp.cpp  QuickHelp.h  Widget.h  main.cpp
DesignPatterns/CoR/Loggers/: ConsoleLogger.cpp  ConsoleLogger.h  DbLogger.cpp  DbLogger.h  FileLogger.cpp  FileLogger.h  Logger.h  main.cpp  mylog.txt
DesignPatterns/CoR/TestLogger/: Application.cpp  Application.h  ConsoleLogger.cpp  DbLogger.cpp  DbLogger.h  FileLogger.cpp  FileLogger.h  Logger.h  main.cpp
DesignPatterns/Command/Command/: CMakeLists.txt  Command.h  ConcreteCommand.cpp  ConcreteCommand.h  Invoker.cpp  Invoker.h  Receiver.cpp  Receiver.h  main.cpp
DesignPatterns/Command/FindReplaceDlg/: Command.h  FindDialog.cpp  FindDialog.h  MainWindow.cpp  MainWindow.h  main.cpp
DesignPatterns/Observer/AlarmSystem/: Alarm.cpp  Alarm.h  AlarmObserver.h  HeavyGunner.cpp  HeavyGunner.h  Soldier.cpp  Soldier.h  Tank.cpp  Tank.h  main.cpp
DesignPatterns/Observer/Basic/: ConcreteObserver.cpp  ConcreteObserver.h  ConcreteSubject.cpp  ConcreteSubject.h  Observer.h  Subject.cpp  Subject.h  main.cpp
DesignPatterns/Observer/ChangeManager/: Billboard.cpp  Billboard.h  ChangeManager.cpp  ChangeManager.h  OnValueChanged.h  Recorder.cpp  Recorder.h  Sensor.h  SimpleDisplay.cpp  SimpleDisplay.h  TemperatureSensor.cpp  (+4 more)
(+123 files in other folders)
